# tushar-sharma.github.io

./: .gitignore  .gitmodules  .gitpod.yml  .staticrypt.json  2023-05-26-cribsheet-for-string-java.md  2023-08-28-week1-september-reflection-2023.md  2025-03-10-download-detroit-become-Human.html.br  404.html  404.html.br  CNAME  CNAME~  Dockerfile  FontAwesome.ttf.br  Gemfile  How-to-play-Super-Mario-Odyssey-on-PC-(Yuzu-Emulator).html  How-to-play-Super-Mario-Odyssey-on-PC-Yuzu-Emulator.html  Makefile  Mindy  Noelle  README.md  README.md~  _config.yml  adapter-pattern.html  ads.txt  ads.txt.br  atom.xml  aws-cli-to-stop-running-instances-of-statemachine.html  bookmark-using-chatgpt.html  branch.txt  caste-politics-in-usa.html  catlya  createPost.sh  cribsheet-string-java.html  daily-log-2022-08-29.html  daily-log-2022-08-30.html  debugging-spark-application-using-remote-container.html  docker-compose.yml  feed.xml  feed.xml.br  fernanda costa  (+59 more)
_data/: allowedAds.list  books.yaml  games.yaml  places.yaml  showcase.yaml  travel_locations.yaml  watchlist.yaml  weeks.yaml
_includes/: .root.html.swp  .sidebar.html.swp  2022-06-20-getting-started-parquet.md  aboutme.html  aboutme.html~  adds.html  album.html  back_to_top.html  book_notes_content.html  chess.html  coming_soon.html  comments.html  comments.html~  embed-audio.html  footer.html  footer.html~  google_analytics.html  habits.html  head.html  head.html~  mathjax.html  mermaid.html  mining.html  navigation.html  navigation.html~  quotes.html  (+19 more)
scripts/: pyproject.toml  updateHabits.py
scripts/audio/: text-to-speech.py
(+3127 files in other folders)
