[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Tushar Sharma <tushar.sharma1729@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^4.0.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
